--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -2,7 +2,7 @@ body {
 		background-color:  #282A2C; /* whitesmoke; */
 		color: whitesmoke; /*text color*/
 	  font-family: Courier, Futura, Impact, Helvetica;/*ranked choice list in case browser doesn't have Futura, Impact, etc*/
-	  font-size: 7vw;
+	  /*font-size: 7vw;
 
   	/*min-width: 800px;*/
 		/*width: auto;/* !important;
@@ -17,33 +17,50 @@ a:hover{
   	text-decoration: none; /*take away underline*/
 }
 
-/*only affects pages with this tag*/
+/*PASSCODE PAGE*/
 .passcode{
 	  background-color:  #282A2C;
 	  color: whitesmoke; /*text color*/
 	  text-align: center;
 }
-
 .passcodeBody{
 	  display: flex;
 	  flex-direction: column;
-	  justify-content: center;  /*along x axis*/
-	  align-items: center; /*along y axis*/
-	  align-self: center;
+	  align-items: center;
+}
+.passcodeText{
+  font-size: calc(20px + 3vw);
+	margin-bottom: 2vw;
+}
+.codeInput{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: stretch;
+	margin: calc(10px + 2vw);
+}
+.codeInputBox{
+	margin: calc(1px + 0.5vw);
+	font-size: calc(15px + 1vw);
+	text-align: center;
+}
+.codeFeedback { /*not working for some reason*/
+  color: firebrick;
+  opacity: 0;
+	font-size: calc(15px + 1vw);
 }
 
 #passages button {
   background-color: #664180;
   border-color: #2C1D36;
+	font-size: calc(15px + 1vw);
 }
 
 .enter{
   background-color: #A5CCEC;
 }
 
-.passcodeText{
-  font-size: 200%;
-}
+
 
 /*turn off the sugarcube sidebar*/
 #ui-bar{
@@ -52,17 +69,6 @@ a:hover{
 
 #story{
   	margin: 2vw 2vw !important;
-}
-
-.invalid { /*not working for some reason*/
-  color: firebrick;
-  opacity: 0;
-  /*animation: none; flashing 3s linear
-  animation-iteration-count: 1;
-  -webkit-animation-name: flashing;
-  -webkit-animation-duration: 3s;
-  -webkit-animation-iteration-count: 1;
-  -webkit-animation-fill-mode: forwards;*/
 }
 
 @-webkit-keyframes flashing{
@@ -74,95 +80,141 @@ a:hover{
   width: 20px;
 }
 
-
-.darkMessage {
+/* CHAT PAGE */
+.chatMessage {
 	align-items: center;
+	justify-content: flex-start;
   background-color: #4E4256;/*#72657B;/*#9C94A2;*/
 	border: 4px solid #dedede;
   border-color: #2C1D36;/*#483D50; /*#72657B;*/
-  border-radius: 5px;
+  border-radius: 3px;
 	color: whitesmoke;
 	display: flex;
 	flex-direction: row;
-  margin: 20px 0;
-	padding: 10px;
+  margin: 2vw 0;
+	padding: 1vw;
+	font-size: calc(8px + 0.5vw);
+	text-align: justify;
+	width:inherit;
+}
+
+.chatTextCol{
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+	align-items: flex-start;
+	justify-content: flex-start;
+	align-self: flex-start;
+	margin-right: 1vw;
+}
+
+.chatMessageText{ /*Not working for some reason. set in javascript*/
+	margin: 0;
+	line-height: calc(12px + 0.5vw);
+}
+
+.chatUsernameP{
+	margin: 0;
+}
+
+.chatAvatar {
+  display: block;
+  float: left;
+	height: calc(25px + 5vw);/*100px*/
+  margin-right: 1.8vw;/*20px*/
+  width: calc(25px + 5vw);/*100px*/
+	flex: none;
+}
+
+.chatPage{
+	font-size: calc(9px + 0.5vw);
+}
+
+.chatScroll{
+  height: 85vh;
+  overflow-y: auto;
+  text-align: center;
+}
+
+.chatNotif{
+  color: darkgrey;
+	margin-left: 1vw;
+	opacity: 0.8;
+}
+
+/* DISCUSSION MESSAGE PAGE */
+@media screen and (min-width: 800px) {
+}
+
+.darkMessage {
+  background-color: #4E4256;/*#72657B;/*#9C94A2;*/
+	border: 3px solid #dedede;
+  border-color: #2C1D36;/*#483D50; /*#72657B;*/
+	/*color: whitesmoke;*/
+	border-radius: 5px;
+
+	display: flex;
+	flex-direction: row;
+	padding: 1.5vw;
+	font-size: calc(8px + 0.7vw);
+	line-height: calc(12px + 0.7vw);
+}
+
+.textCol{
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+}
+
+.usernameP{
+	margin-top: 0;
+	margin-bottom: 1vw;
 }
 
 .messageText{
-	align-content: flex-start;
-  align-items: flex-start;
-  align-self: flex-start;
-	margin-bottom: 3px;
-  margin-top: 0.5px;
-  padding: 3px;
+	margin: 0;
 }
-
-.userMessage{
-  background-color: #f1f1f1;
-}
-
-.darkMessage::after {
-	clear: both;
-  content: "";
-  display: table;
-}
-
-/*.darkMessage img {
-  float: left;
-  display: block;
-  max-width: 200px;
-  min-width: 200px;
-  max-height: 200px;
-  min-height: 200px;
-  margin-right: 20px;
-}*/
 
 .avatar {
-  align-self:center;
-  float: left;
-  padding: 15px;
+	flex: none;
+	margin-right: 1.5vw;
+	height: calc(25px + 12vw);/*200px*/
+	width: calc(25px + 12vw);/*200px*/
 }
 
 .avatarImg {
-  display: block;
-  float: left;
-	height: 200px;
-  margin-right: 20px;
-  width: 20px;
-  width: 200px;
+	height: 100%;
+	width: 100%;
 }
 
 .responses{
-	align-items: center;
   display: flex;
-  height: 180px;
-  margin: 20px 0;
+	align-items: center;
+	flex-direction: column;
+
+  margin: 2vw;
+	font-size: calc(8px + 0.7vw);;
 }
 
 .option {
-	background-color: #282A2C;
-
-  border: 4px solid #5D8FB7;
+	/*background-color: #282A2C;*/
+	display: flex;
+  border: 3px solid #5D8FB7;
   border-color: #664180;
 	border-radius: 5px;
-
-	color: darkgrey;
-	display: flex;
-  flex-basis: 100%;
-	height: inherit;
-
-  margin: 20px 0;
-  margin-left: 20px;
-  margin-right: 20px;
-
-	padding: 10px;
-  text-align: center;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	margin: 1.5vw;
+	height: auto;
+	width: 100%;
 }
 .option:hover {
   background-color: #4E4256;/*#9A71B4;*/
   border-color: #2C1D36;
 }
 
+/* HANGMAN GAME */
 .hangmanBoard{
 	align-items: center; /*center aligned within the column*/
   display: flex;
@@ -173,21 +225,23 @@ a:hover{
 }
 
 .hangmanWord{
-	font-size: 6vw;/*clamp(16px, 4vw, 22px);*/
+	font-size: calc(13px + 2vw);/*calc(16px + 2vw); /*clamp(16px, 4vw, 60px);*/
   text-align: center;
   white-space: pre;
+	margin: calc(10px + 3vw);
 }
 
 .hangmanFeedback{
-	font-size: 6vw;
+	font-size: calc(20px + 2vw);
   text-align: center;
   white-space: pre;
+	margin: 2vw;
 }
 
 .alphabet{ /*full hangman alphabet board*/
   display: flex;
   flex-direction: column;
-	font-size: 5vw;
+	font-size: calc(20px + 2vw);
 }
 
 .alphaLine{ /*just one line of the hangman alphabet*/
@@ -197,114 +251,70 @@ a:hover{
 
 }
 
-@media screen and (min-width: 800px) {
-  .alphabet, .hangmanFeedback, .hangmanWord {
-
-		height: auto;
-		width: 800px;
-  }
-	.hangmanFeedback, .hangmanWord{
-		font-size: 50px;
-	}
-	.alphabet{
-		font-size: 40px;
-	}
-	/*.hangmanBoard {
-		height: auto;
-		width: 800px;
-	}*/
-}
 
 button:disabled,
 button[disabled]{
   opacity: 0;
 }
 
+@media screen and (max-width: 450px) {
+  /* .helper {
+		width: 95vw !important;
+  } */
+}
+
 /* The helper message box */
 .helper {
-  background-color: dimgrey;
-  color: whitesmoke;
 	display: flex;
   flex-direction: row;
-  font-size: 75%;
-	left: 50%;
-	margin-bottom: 5px;
-	padding: 10px;
+  font-size: calc(8px + 0.7vw);
+	left: 50%; /* centers on x axis */
+	padding: 1vw;
 	position: fixed;
   text-align: left;
 	transform: translateX(-50%);
-  width: 650px;
-
-  /*border: 4px solid #dedede;
-  border-color: #4f4f4f;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;*/
-}
-
-.usernameP{
-	margin-bottom: 0.5px;
-  margin-top: 3px;
-	padding: 3px;
+  width: calc(300px + ((100vw - 300px) * 0.5));
+	margin: 1vw;
 }
 
 .helperText{
-	margin-bottom: 3px;
-  margin-top: 0.5px;
-	padding: 3px;
+	margin: 0;
 }
-
 .allHelperText{
   flex-grow: 3;
 }
-
-.helperAvatar {
-  align-self: center;
-  float: left;
-	margin-right: 20px;
-}
-
 .helperAvatarImg {
 	align-self: center;
   border-radius: 50%;
-  height: 55px; /**/
-	margin-left: 10px;
-  margin-right: 30px;
-  width: 55px; /* you can use % */
+  height: auto;
+	width: calc(10px + 5vw);
+	margin-right: 2vw;
 }
-
 /* The close button */
 .closebtn {
   color: white;
 	cursor: pointer;
 	float: right;
-  font-size: 22px;
+  font-size: calc(15px + 1vw);;
 	font-weight: bold;
-  line-height: 20px;
-	margin-left: 15px;
+  line-height: calc(8px + 0.5vw);
   position: relative;
-	transition: 0.3s;
+	align-items: flex-start;
+	opacity: 0.5;
 }
-
 /* When moving the mouse over the close button */
 .closebtn:hover {
   color: black;
 }
 
-.chatScroll{
-  height: 80vh;;
-	margin: 4px, 4px;
-  overflow-x: hidden;
-  overflow-y: auto;
-	padding: 4px;
-  text-align: justify;
-	width: 1000px;
-}
-
-.chatNotif{
-  color: darkgrey;
+/*MANIFESTO PAGE*/
+@media screen and (min-width: 800px) {
+  .manifesto {
+		font-size: 20px !important;
+  }
 }
 
 .manifesto{
   color: darkgrey;
+	font-size: calc(10px + 1.3vw);
 }
